gap modified to avoid the direction of the component transforms into row

--- a/src/pages/Homepage/Homepage.module.css
+++ b/src/pages/Homepage/Homepage.module.css
@@ -33,10 +33,12 @@
   display: flex;
   width: 100%;
   height: 100%; 
-  flex-direction: row !important; 
+  flex-direction: row; 
   align-items: center;
   justify-content: center; 
   gap: 2.5rem; 
+  margin: 0 auto; 
+  max-width: 1200px; 
   flex-wrap: wrap;
 }
 .sofexs {
